LU-7737 lod: not return -EIO during process updates log

Do not return -EIO in lod_process_updates_recovery(),
otherwise the update log might be deleted incorrectly,
especially when doing umount during recovery, see
llog_process_thread().

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I822dae9984eb044ce3d63a30d8bb24294f46dd65
Reviewed-on: http://review.whamcloud.com/18308
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>